26. Change defaults:
        Button effect: Shadow
        Mouse over: Glow
        Default button indicator: Glow
        V arrows
        Flat toolbars
        Filled focus
        Gradient selection
        Flat scrollbar buttons
        No combo line
        Sunken toolbar handles
        Only lighten popupmenus by 2%
        Flat active tab
        Don't shade sliders
27. Fix weird mouse-over behaviour of toolbar buttons under Qt4.5
28. Enable shadow, etch, and 'glow' effects for squared and slight rounded appearance.

0.60
----
 1. If appearance is rounded, also round the 'rubber band' selection.
 2. Dont draw light border around selection.
 3. Round all view selections.
 4. Fix mouse-over selections with custom gradient.
 5. Fix KDE app checking.
 6. New focus rect options - standard, highlight, background, filled.
 7. Add the ability to specify popup menu light factor.
 8. Put more space between arrows on combos if using Gtk combo menus and
    V arrows.
 9. Fix blurry arrows in url navigator.
10. Set menu palette.
11. Add option to use darkened background colour for menuitem selection.
12. Add 'fade' to menuitem appearance.
13. Option to have flat scrollbar buttons.
14. New slider styles - plain rotated, and round rotated.
15. Modified window decorations's 'on all desktops' button.
16. Fix plain stripes on flat progressbar.
17. Fix large border in kontact.
18. Use lighter shade for titlebar fill.
19. Add option to specify appearance of titlebar buttons.
20. Add option to specify appearance of inactive titlebars.
21. Recolour X of close button - not button background.
22. Dont draw sunken button for KMenu title background - just draw Menu background.
23. Alter the way the light part of etchibng is drawn - should help with darker color schemes.
24. Don't draw light etch part for widget in QAbstractItemView's, KRunner, or Plasma dialogs.
25. Increase size of busy progressbar.
26. Draw border around filled progress.